--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,7 @@
     --main-bg: #131418;
     --main-fg: #ccc;
     --main-link: #8af;
+    --alt-bg: #232428;
     --header-bg: #000;
     --header-fg: #fff;
     --header-border: #777;
@@ -98,9 +99,121 @@ header nav .rss {
     border-radius: 0;
 }
 
+
+/*************************/
+/* FRONTPAGE */
+main.frontpage {
+    flex: 1 1 auto;
+    width: 100%;
+    margin: 0 auto;
+    background-color: var(--main-bg);
+}
+main.frontpage .banner {
+    flex-grow: 2;
+}
+main.frontpage .banner img {
+    width: 100%;
+}
+main.frontpage .video {
+    flex-grow: 2;
+    padding: 1em;
+    min-height: 100px;
+}
+main.frontpage .video iframe {
+    width: 100%;
+}
+.punchline {
+    font-weight: bold;
+    flex-grow: 1;
+    font-family: sans-serif;
+    /*border: 1px solid red;*/
+}
+.punchline1 {
+    font-size: 300%;
+    padding-bottom: 0.6em;
+}
+.punchline1 .button {
+    font-size: 70%;
+}
+.punchline2 {
+    padding-top: 1em;
+    font-size: 150%;
+}
+.punchline3 {
+    font-size: 150%;
+    text-align: center;
+    padding-bottom: 1em;
+}
+.punchline .center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    flex-direction: column;
+}
+main.frontpage .card {
+    padding: 20pt;
+}
+main.frontpage .button {
+    border: 2px solid #aa5;
+    background-color: #ee0;
+    color: #224;
+    padding: 0.1em 0.5ch;
+    border-radius: 0.6em;
+    margin: 0.2em;
+}
+main.frontpage .card1 {
+    /* Gradient background? */
+}
+.aspectratio {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+    min-width: 300px;
+}
+.center-vertical {
+    height: 100%;
+    flex: 1 1 auto;
+}
+.aspectratio iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+.container1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.container3 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+main.frontpage .card2 {
+    background-color: var(--alt-bg);
+    padding: 20pt;
+}
+main.frontpage .card3 {
+    background-color: var(--main-bg);
+    padding-bottom: 10em;
+}
+main.frontpage .card3 .item {
+    flex-grow: 1 1 0;
+}
+main.frontpage .card3 img {
+    max-height: 200pt;
+    padding: 1em;
+}
+
 /*************************/
 /* CONTENT */
-main {
+main.default {
     flex: 1 1 auto;
     max-width: 100%;
     width: 80ch;
@@ -111,10 +224,6 @@ main {
     box-shadow: 0 0 100pt var(--main-border),
                 0 0 20pt var(--main-border);
     z-index: 0;
-}
-main .banner {
-    width: 100%;
-    border-radius: 0;
 }
 main h1 {
     margin-top: 0;
