add a pointless but hopefully pretty line to the front page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,7 @@
                     <span class="center">
                         Reimagine<br />
                         Neural Interfaces<br />
+                        <div class="line"></div>
                         <!--<a href="..." class="button">Try Now</a>-->
                     </span>
                 </div>
