add img alt texts

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,7 +13,7 @@
         <header>
             <div class="content">
                 <a href="{{ "/" | relURL }}{{ partial "index" }}">
-                    <img class="logo" src="{{ "favicon.ico" | relURL }}" />
+                    <img class="logo" src="{{ "favicon.ico" | relURL }}" alt="" />
                     <span class="header">PsyLink</span>
                 </a>
                 <nav>
@@ -30,7 +30,7 @@
                     </span>
                     <a href="https://codeberg.org/psylink/psylink">Source</a>
                     <a href="{{ "faq" | relURL }}/{{ partial "index" }}">FAQ</a>
-                    <a href="/index.xml"><img src="{{ "feed-icon.png" | relURL }}" class="rss" /></a>
+                    <a href="/index.xml"><img src="{{ "feed-icon.png" | relURL }}" class="rss" alt="RSS" /></a>
                 </nav>
             </div>
         </header>
