--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
                     </span>
                 </div>
                 <div class="item banner">
-                    <a href="/p4"><img src="/img/prototypes/p4.jpg" class="banner" /></a>
+                    <a href="/p4"><img src="/img/prototypes/p4.jpg" class="banner" alt="View prototypes" /></a>
                 </div>
             </div>
         </div>
@@ -40,16 +40,16 @@
             </center>
             <div class="container3">
                 <div class="item">
-                    <a href="/boards"><img src="/img/boards/bp3.png" /></a>
+                    <a href="/boards"><img src="/img/boards/bp3.png" alt="View PsyLink circuit boards" /></a>
                 </div>
                 <div class="item">
-                    <a href="/circuits"><img src="/img/circuits/c9.1.png" /></a>
+                    <a href="/circuits"><img src="/img/circuits/c9.1.png" alt="View PsyLink circuit schematics" /></a>
                 </div>
                 <div class="item">
-                    <a href="/software"><img src="/img/software/s3.png" /></a>
+                    <a href="/software"><img src="/img/software/s3.png" alt="View PsyLink software" /></a>
                 </div>
                 <div class="item">
-                    <a href="/textiles"><img src="/img/blog/2021-05-12_electrode_map.jpg" /></a>
+                    <a href="/textiles"><img src="/img/blog/2021-05-12_electrode_map.jpg" alt="View PsyLink textiles" /></a>
                 </div>
             </div>
             <br />
