--- a/static/style.css
+++ b/static/style.css
@@ -133,6 +133,7 @@ main.frontpage .video iframe {
 }
 .punchline1 .line {
     width: 55%;
+    box-shadow: 0 0 8pt var(--logo-fg);
     border: 3pt solid var(--logo-fg);
 }
 .punchline1 .button {
@@ -160,10 +161,15 @@ main.frontpage .card {
 }
 main.frontpage .button {
     background-color: var(--logo-fg);
-    color: #224;
+    color: #000;
     padding: 0.1em 0.5ch;
     border-radius: 0.4em;
     margin: 0.6em 0.2em;
+    box-shadow: 0 0 8pt var(--logo-fg);
+    transition: 0.4s;
+}
+main.frontpage .button:hover {
+    box-shadow: 0 0 100pt rgba(0,0,0,0);
 }
 main.frontpage .card1 {
     /* Gradient background? */
