Place the "Get PsyLink" on the front page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,8 +6,7 @@
                     <span class="center">
                         Reimagine<br />
                         Neural Interfaces<br />
-                        <div class="line"></div>
-                        <!--<a href="..." class="button">Try Now</a>-->
+                        <a href="/get" class="button">Get PsyLink</a>
                     </span>
                 </div>
                 <div class="item banner">
