--- a/layouts/index.html
+++ b/layouts/index.html
@@ -55,7 +55,7 @@
             <br />
             <br />
             <center class="punchline punchline3">
-                <a href="/blog">Blog</a> &mdash; <a href="/faq">FAQ</a> &mdash; <a href="https://codeberg.org/psylink/psylink">git</a>
+                <a href="/blog">Blog</a> &mdash; <a href="/faq">FAQ</a> &mdash; <a href="https://codeberg.org/psylink/psylink">git</a> &mdash; <a rel="me" href="https://fosstodon.org/@psylink">mastodon</a>
             </center>
         </div>
     </main>
