--- a/layouts/shortcodes/link.html
+++ b/layouts/shortcodes/link.html
@@ -1,3 +1,3 @@
-{{ with site.GetPage (.Get 0) -}}
+{{ range first 1 (where site.Pages "Slug" (.Get 0)) -}}
 [{{ .Title }}]({{.RelPermalink}}{{ if not hugo.IsProduction }}index.html{{ end }})
 {{- end -}}
