stronger highlight of <b>/<strong> tags

--- a/static/style.css
+++ b/static/style.css
@@ -38,6 +38,9 @@ body {
 a, a:visited {
     text-decoration: none;
 }
+b, strong {
+    color: #fff;
+}
 /*************************/
 /* HEADER */
 header {
