update video URLs to the remastered versions

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
                 <div class="item video">
                     <div class="center-vertical">
                         <div class="aspectratio">
-                            <iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="PsyLink 4 Demo" src="https://peertube.linuxrocks.online/videos/embed/0fe35dae-f1fc-4ace-b6e1-5f54e255bbef" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="PsyLink 4 Demo (remastered)" src="https://peertube.linuxrocks.online/videos/embed/50f04ab3-fb5f-4fda-b254-af0664641828" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
