--- a/static/style.css
+++ b/static/style.css
@@ -209,6 +209,10 @@ main.frontpage .card1 {
     flex-wrap: wrap;
     justify-content: space-around;
 }
+main.frontpage .container1, main.frontpage .container3 {
+    max-width: 200vh;
+    margin: 0 auto;
+}
 main.frontpage .card2 {
     background-color: var(--alt-bg);
     padding: 20pt;
