--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -3,7 +3,7 @@
 <li><b class="warning">Work in progress. Expect changes.</b></li>
 {{ end }}
 {{ if .Params.broken }}
-<li><b class="warning">WARNING: This {{ default "item" $params.child_label }} contains a bug and will not funciton.</b></li>
+<li><b class="warning">WARNING: This {{ default "item" $params.child_label }} contains a bug and will not function.</b></li>
 {{ end }}
 {{ if not .Params.tested }}
 <li><b class="warning">WARNING: NOT FULLY TESTED</b></li>
