add fallback text for video

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,7 +18,10 @@
             <div class="container1">
                 <div class="item video">
                     <div class="center-vertical">
-                        <div class="aspectratio">
+                        <div class="aspectratio video-iframe-container">
+                            <div class="video-fallback-text">
+                                If the demo video doesn't load, you can view it directly on <a href="https://peertube.linuxrocks.online/w/aZFZPDqEyAHL5Z1Fn35xRj">PeerTube</a>
+                            </div>
                             <iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="PsyLink 4 Demo (remastered)" src="https://peertube.linuxrocks.online/videos/embed/50f04ab3-fb5f-4fda-b254-af0664641828" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
