fixed front page image

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
                     </span>
                 </div>
                 <div class="item banner">
-                    <a href="/p8"><img src="/img/prototypes/p8.jpg" class="banner" alt="View prototypes" /></a>
+                    <a href="/p8"><img src="/img/front.jpg" class="banner" alt="View prototypes" /></a>
                 </div>
             </div>
         </div>
