new video on front page about Prototype 8

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,9 +20,9 @@
                     <div class="center-vertical">
                         <div class="aspectratio video-iframe-container">
                             <div class="video-fallback-text">
-                                If the demo video doesn't load, you can view it directly on <a href="https://peertube.linuxrocks.online/w/aZFZPDqEyAHL5Z1Fn35xRj">PeerTube</a>
+                                If the demo video doesn't load, you can view it directly on <a href="https://peertube.linuxrocks.online/w/pCegLbWMGSLmDgJUb6C8WQ">PeerTube</a>
                             </div>
-                            <iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="PsyLink 4 Demo (remastered)" src="https://peertube.linuxrocks.online/videos/embed/50f04ab3-fb5f-4fda-b254-af0664641828" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="PsyLink 8 - Open Source Neural Interface" src="https://peertube.linuxrocks.online/videos/embed/bf5124d7-4d94-46b6-96c9-06fb0de7ee98" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
