rename the "Components" item in the menu bar to "Parts" for brevity

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,7 +20,7 @@
                     <a href="{{ "blog" | relURL }}/{{ partial "index" }}">Blog</a>
                     <a href="{{ "prototypes" | relURL }}/{{ partial "index" }}">Prototypes</a>
                     <span class="parts">
-                        Components
+                        Parts
                         <div class="dropdown-content">
                             <a href="{{ "circuits" | relURL }}/{{ partial "index" }}">Circuits</a><br />
                             <a href="{{ "boards" | relURL }}/{{ partial "index" }}">Boards</a><br />
