put the donation link on the frontpage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,6 +7,7 @@
                         Reimagine<br />
                         Neural Interfaces<br />
                         <a href="/get" class="button">Get PsyLink</a>
+                        <a href="/faq#donations" class="button">Donate</a>
                     </span>
                 </div>
                 <div class="item banner">
