--- a/layouts/shortcodes/allposts.html
+++ b/layouts/shortcodes/allposts.html
@@ -16,7 +16,7 @@
 </article>
 {{ range $pages }}
 <article id="{{ .Slug }}">
-<span style="float: right;">❬<a href="{{ .RelPermalink }}">{{ .Date.Format "2006-01-02" }}</a>❭</span>
+{{ partial "shortmetadata.html" . }}
 <h1>{{ .Title }}</h1>
 {{ .Content }}
 </article>
