nicer blog intro

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -14,7 +14,7 @@
         <h1>{{ .Title }}</h1>
         {{ .Content }}
         {{ end }}
-        <h1 id="toc">Table of Contents</h1>
+        <h1 id="toc">All entries</h1>
         <ul>
             {{ range .Pages }}
             <li>
