add Matrix link at the bottom of the frontpage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -59,7 +59,7 @@
             <br />
             <br />
             <center class="punchline punchline3">
-                <a href="/blog">Blog</a> &mdash; <a href="/faq">FAQ</a> &mdash; <a href="https://codeberg.org/psylink/psylink">git</a> &mdash; <a rel="me" href="https://fosstodon.org/@psylink">mastodon</a>
+                <a href="/blog">Blog</a> &mdash; <a href="/faq">FAQ</a> &mdash; <a href="https://codeberg.org/psylink/psylink">git</a> &mdash; <a rel="me" href="https://fosstodon.org/@psylink">Mastodon</a> &mdash; <a href="https://matrix.to/#/#psylink:matrix.org">Matrix</a>
             </center>
         </div>
     </main>
