change the frontpage banner to the new p9.2 photograph

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
                     </span>
                 </div>
                 <div class="item banner">
-                    <a href="/p8"><img src="/img/front.jpg" class="banner" alt="View prototypes" /></a>
+                    <a href="/get"><img src="/img/prototypes/p9.1.jpg" class="banner" alt="Get PsyLink" /></a>
                 </div>
             </div>
         </div>
