--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
     {{ if .Params.toc }}
-        <aside id="ToC">
+        <aside class="toc">
             <span class="title">Contents:</span>
             {{ .TableOfContents }}
         </aside>
