--- a/static/style.css
+++ b/static/style.css
@@ -307,6 +307,10 @@ main h3 {
 main a, main a:visited {
     color: var(--main-link);
 }
+main a[href*="//"], nav a[href*="//"] {
+    text-decoration-line: underline;
+    text-decoration-style: double;
+}
 img, iframe {
     max-width: 100%;
     border-radius: 4pt;
