--- a/static/style.css
+++ b/static/style.css
@@ -167,7 +167,7 @@ main.frontpage .card {
 .button {
     background-color: var(--logo-fg);
     font-family: sans-serif;
-    text-decoration: none;
+    text-decoration: none !important;
     color: #000 !important;
     padding: 0.2em 0.6ch;
     border-radius: 0.4em;
