--- a/static/style.css
+++ b/static/style.css
@@ -250,11 +250,13 @@ main.default {
     width: 80ch;
     box-sizing: border-box;
     margin: 0 auto;
-    padding: 1em 2ch 3em 2ch;
     background-color: var(--main-bg);
     box-shadow: 0 0 100pt var(--main-border),
                 0 0 20pt var(--main-border);
     z-index: 0;
+}
+main.default .pad-content {
+    padding: 1em 2ch 3em 2ch;
 }
 main h1 {
     margin-top: 0;
@@ -296,25 +298,7 @@ main h3 {
     right: -85ch;
     background-color: var(--main-bg);
 }
-.bigtocwrapper {
-    display: none;
-    position: absolute;
-    height: 0;
-}
-@media (min-width: 60ch) {
-    .toc { float: right; }
-}
-@media (min-width: 165ch) {
-    .bigtocwrapper { display: block; }
-}
-.toc ul {
-    margin: 0;
-}
-.toc .title {
-    font-size: 115%;
-    text-decoration: underline;
-    color: var(--header-fg);
-}
+
 main a, main a:visited {
     color: var(--main-link);
 }
@@ -348,4 +332,45 @@ table, td, tr {
 }
 .warning {
     color: #f99;
+}
+
+/*************************/
+/* COLLAPSIBLE TABLE OF CONTENTS */
+#collapsible-wrap > input[type="checkbox"] {
+    display: none;
+}
+#collapsible-wrap > label {
+    cursor: pointer;
+    background: linear-gradient(0deg, #121 0%, #362 100%);
+    color: white;
+    font-weight: bold;
+    padding: 6pt 15pt;
+    display: block;
+}
+#collapsible-wrap > label::before {
+    content: ' ';
+    display: inline-block;
+
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid currentColor;
+
+    vertical-align: middle;
+    margin-right: .7rem;
+    transform: translateY(-2px);
+
+    transition: transform .2s ease-out;
+}
+#collapsible-wrap > input:checked + label::before {
+    transform: rotate(90deg) translateX(-3px);
+}
+.collapsible-content {
+    max-height: 0px;
+    overflow: hidden;
+    background: #222;
+    transition: max-height .25s ease-in-out;
+}
+#collapsible-wrap > input:checked + label + .collapsible-content {
+    border-bottom: 1pt solid #444;
+    max-height: 200vh;
 }
