--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ define "preface" }}
     {{ if .Params.toc }}
-        <div id="collapsible-wrap">
-            <input id="collapsible" class="toggle" type="checkbox" checked="checked">
-            <label for="collapsible" class="lbl-toggle">Table of Contents</label>
+        <div class="collapsible-wrap">
+            <input id="collapsible-toc" class="toggle" type="checkbox" checked="checked">
+            <label for="collapsible-toc" class="lbl-toggle">Table of Contents</label>
             <div class="collapsible-content">
                 <div class="collapsible-inner">
                     {{ .TableOfContents }}
