--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,21 +1,20 @@
 {{ define "preface" }}
     {{ if .Params.toc }}
-        <div id="collapsible-wrap">
-            <input id="collapsible" class="toggle" type="checkbox" checked="checked">
-            <label for="collapsible" class="lbl-toggle">Table of Contents</label>
+        <div class="collapsible-wrap">
+            <input id="collapsible-toc" class="toggle" type="checkbox" checked="checked">
+            <label for="collapsible-toc" class="lbl-toggle">Table of Contents</label>
             <div class="collapsible-content">
                 <div class="collapsible-inner">
                     {{ .TableOfContents }}
                 </div>
             </div>
         </div>
-    {{ end }}
-    {{ if .Params.toc_allposts }}
+    {{ else if .Params.toc_allposts }}
         {{ $intro := site.GetPage "blog/intro.md" }}
         {{ $pages := (where $.Site.RegularPages "Section" "eq" "blog").Reverse }}
-        <div id="collapsible-wrap">
-            <input id="collapsible" class="toggle" type="checkbox">
-            <label for="collapsible" class="lbl-toggle">Table of Contents</label>
+        <div class="collapsible-wrap">
+            <input id="collapsible-toc" class="toggle" type="checkbox">
+            <label for="collapsible-toc" class="lbl-toggle">Table of Contents</label>
             <div class="collapsible-content">
                 <div class="collapsible-inner">
                     <ul>
