--- a/static/style.css
+++ b/static/style.css
@@ -250,13 +250,15 @@ main.default {
     width: 80ch;
     box-sizing: border-box;
     margin: 0 auto;
+    padding: 0em 0 3em 0;
     background-color: var(--main-bg);
     box-shadow: 0 0 100pt var(--main-border),
                 0 0 20pt var(--main-border);
     z-index: 0;
 }
 main.default .pad-content {
-    padding: 1em 2ch 3em 2ch;
+    margin: 1em 0;
+    padding: 0em 2ch 0em 2ch;
 }
 main h1 {
     margin-top: 0;
@@ -279,9 +281,14 @@ main h3 {
     background-color: #131;
     padding: 0 10pt;
     margin-bottom: 1em;
+    font-size: 90%;
 }
 .abstract article p {
     margin: 5pt 0;
+}
+.preface {
+    font-size: 90%;
+    text-align: justify;
 }
 .toc {
     font-size: 95%;
@@ -336,10 +343,10 @@ table, td, tr {
 
 /*************************/
 /* COLLAPSIBLE TABLE OF CONTENTS */
-#collapsible-wrap > input[type="checkbox"] {
+.collapsible-wrap > input[type="checkbox"] {
     display: none;
 }
-#collapsible-wrap > label {
+.collapsible-wrap > label {
     cursor: pointer;
     background: linear-gradient(0deg, #121 0%, #362 100%);
     color: white;
@@ -347,7 +354,7 @@ table, td, tr {
     padding: 6pt 15pt;
     display: block;
 }
-#collapsible-wrap > label::before {
+.collapsible-wrap > label::before {
     content: ' ';
     display: inline-block;
 
@@ -361,16 +368,18 @@ table, td, tr {
 
     transition: transform .2s ease-out;
 }
-#collapsible-wrap > input:checked + label::before {
+.collapsible-wrap > input:checked + label::before {
     transform: rotate(90deg) translateX(-3px);
 }
 .collapsible-content {
     max-height: 0px;
     overflow: hidden;
-    background: #222;
+    background-color: #111;
     transition: max-height .25s ease-in-out;
+    background-image: url(hex.png);
+    background-position: 20px 40px;
 }
-#collapsible-wrap > input:checked + label + .collapsible-content {
+.collapsible-wrap > input:checked + label + .collapsible-content {
     border-bottom: 1pt solid #444;
     max-height: 200vh;
 }
