added a clearly visible delimiter between blog posts in listing

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -54,6 +54,7 @@
             {{ partial "shortmetadata.html" . }}
             <h1>{{ .Title }}</h1>
             {{ .Content }}
+            <hr class="postdelimiter" />
         {{ end }}
         {{ $currentPage := .Paginator.PageNumber }}
         <div class="paginator">
