--- a/layouts/partials/shortmetadata.html
+++ b/layouts/partials/shortmetadata.html
@@ -1,1 +1,1 @@
-<span style="float: right;">❬<a href="{{ .RelPermalink }}">{{ .Date.Format "2006-01-02" }}</a>❭</span>
+<span class="postdate">&#x2514;<a href="{{ .RelPermalink }}">{{ .Date.Format "2006-01-02" }}</a>{{ if .Params.author }}, by {{ .Params.author }}{{ end }}</span>
