--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,7 @@
     --main-border: #004c00;
     --main-bg: #131418;
     --main-fg: #ccc;
+    --main-fg-dim: #666;
     --main-link: #8af;
     --alt-bg: #232428;
     --header-bg: #000;
@@ -306,6 +307,12 @@ div.post_end {
 }
 div.post_begins {
     border-radius: 20pt 20pt 0 0;
+}
+.legal {
+    font-size: 80%;
+    color: var(--main-fg-dim);
+    text-align: justify;
+    line-height: 0.95;
 }
 .abstract article {
     border: 3pt solid #363;
